fixed z-index of owl interfering with search result

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,7 +14,7 @@
 }
 .z-ind{
 	position: absolute;
-	z-index : -1;
+	z-index : 1;
 	whitespace: normal;
 	wordwrap: break-word;
 	display: block;
